--- a/index.html
+++ b/index.html
@@ -51,12 +51,27 @@
 	<a href="https://in.linkedin.com/in/pawanbathe">Linked In</a> <br>
 	<a href="https://www.hackerearth.com/users/bathepawan/">Hackerearth</a> <br>
 	</blockquote>
-    <h2>Header</h2>
-    <p>Nunc interdum risus. Ut eleifend quam sit amet ligula. Ut nec purus nec orci ultricies laoreet. Fusce non libero. Suspendisse id enim quis mi egestas pretium. Cras convallis molestie leo. Etiam iaculis, dui non pharetra tempor, dolor magna sodales est, ac viverra nunc quam at dolor. Integer diam quam, interdum lobortis, adipiscing vitae, auctor vel, ante. Proin nec diam id ante aliquam dapibus. Nulla pretium velit in nisi. Aliquam facilisis elit vel felis. Aenean tincidunt auctor libero. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam ipsum. Sed odio massa, scelerisque ac, lacinia sed, dictum sit amet, metus. Donec non pede sit amet lacus porta scelerisque. Nulla facilisi. </p>
+    <h2>Reach me out for</h2>
+    <p>
+		<ul>
+		<li>You wan't me to work with you on good idea.</li> 
+		<li>Disscuss startup idea.</li>
+		<li>Anything else that you fill could motivate me.</li>
+		</ul>
+	</p>
   </div>
   <div id="bottom">
-    <h2>Services</h2>
-    <p><img class="imgleft" src="images/orb.png" alt="" />Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec vel diam at mauris tincidunt condimentum. Aenean in urna. Nam in odio. Maecenas rhoncus. Vivamus augue. Nulla id sem. Nam viverra urna at nisl tincidunt bibendum. In pharetra ullamcorper lectus. Nam eget dui mollis purus viverra tempor. Praesent cursus nunc ac mi. Morbi bibendum. Praesent eu massa eu eros iaculis convallis. Nullam convallis. Proin luctus, ante eget molestie pellentesque, arcu nisi aliquet risus, id rhoncus erat justo et sem. Nam ipsum. Sed odio massa, scelerisque ac, lacinia sed, dictum sit amet, metus. Donec non pede sit amet lacus porta scelerisque. Nulla facilisi.</p>
+    <h2>Personal Interests</h2>
+		<p>
+		<img class="imgleft" src="images/orb.png" alt="" />
+		<ul>
+		<li>Android Benchmarking</li>
+		<li>Hardware Validations</li>
+		<li>Android Application Developement </li>
+		<li>Perfomance Analysis </li>
+		<li>Battery Performance </li>
+		</ul>	
+		</p>
   </div>
   <div class="clear"></div>
   <div id="footer">
@@ -64,9 +79,7 @@
       <h1>Web Resources</h1>
       <div class="navlist">
         <ul>
-          <li><a href="#">Open Designs</a></li>
-          <li><a href="#">Open Web Design</a></li>
-          <li><a href="#">CSS Drive</a></li>
+          <li><a href="#">Test Item</a></li>
         </ul>
       </div>
     </div>
@@ -74,9 +87,7 @@
       <h1>Links</h1>
       <div class="navlist">
         <ul>
-          <li><a href="#">BBC News Frontpage</a></li>
-          <li><a href="#">Hartlepool Today</a></li>
-          <li><a href="#">SV Horizons Travelblog</a></li>
+          <li><a href="#">Test Item</a></li>
         </ul>
       </div>
     </div>
@@ -84,13 +95,11 @@
       <h1>More Links</h1>
       <div class="navlist">
         <ul>
-          <li><a href="#">Dynamic Drive CSS Library</a></li>
-          <li><a href="#">Listamatic</a></li>
-          <li><a href="#">CSS Play</a></li>
+          <li><a href="#">Test Item</a></li>
         </ul>
       </div>
     </div>
-    <p><a href="#">homepage</a> | <a href="#">contact</a> | <a href="http://validator.w3.org/check?uri=referer">html</a> | <a href="http://jigsaw.w3.org/css-validator">css</a> | &copy; 2007 Anyone | Design by <a href="http://www.mitchinson.net"> www.mitchinson.net</a> | Licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 License</a></p>
+    <p><a href="#">Homepage</a> | <a href="#">Contact</a> | <a href="http://validator.w3.org/check?uri=referer">Html</a> | <a href="http://jigsaw.w3.org/css-validator">CSS</a> | &copy; 2015 Pawan Bathe | Design by <a href="http://www.mitchinson.net"> www.mitchinson.net</a> | Licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 License</a></p>
   </div>
 </div>
 </body>
