--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Pawan Bathe... Software Architect</title>
+<title>Pawan Bathe, Sometimes Silent But Always Around (like Air :P) </title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
@@ -13,10 +13,10 @@
   <div id="navbar">
     <ul>
       <li><a href="#">Home</a></li>
-      <li><a href="#">About Me</a></li>
-      <li><a href="#">Resume</a></li>
-      <li><a href="#">Socialize</a></li>
-      <li><a href="#">Contact me</a></li>
+      <li><a href="about.html">About Me</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="social.html">Socialize</a></li>
+      <li><a href="contact.html">Contact me</a></li>
     </ul>
   </div>
   <div class="clear"></div>
@@ -33,18 +33,17 @@
       <ul>
         <li><a href="#">Link one</a></li>
         <li><a href="#">Link two</a></li>
-        <li><a href="#">Link three</a></li>
-        <li><a href="#">Link four</a></li>
-        <li><a href="#">Link five</a></li>
-      </ul>
+	 </ul>
     </div>
-    <p> I am just another Computer Science Graduate </p>
+    <p> <b>"I may not be better that anybody , but I am definately different than everybody."</b> </p>
   </div>
   <div id="content">
     <h2>About me </h2>
     <blockquote> 
-    <p>I am Pawan Bathe, Currently working as Android Performance SQA Engineer at NVIDIA Graphics Pvt. Ltd, Pune.
-	I received my bachelors degree in Computer Science and Engineering from Government College of Engineering , Aurangabad. <br> </p>
+    <p>I am Pawan Bathe, Currently working as Hardware and Software Validation Engineer at Mango Man Consumer Electronics Pvt. Ltd, Banglore 
+	</br>Before I join Mango Man I was working as Performance and Battey Power SQA Engineer at NVIDIA Graphics Pvt. Ltd, Pune.
+	I received my bachelors degree in Computer Science and Engineering from Government College of Engineering , Aurangabad. <br>
+    </p>
 	Connect me: <br>
 	<a href="http://pawanbathe.hpage.com/">pawanbathe.hpage.com</a> <br>
 	<a href="http://www.quora.com/Pawan-Bathe">Quora</a> <br>
