--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div id="content">
     <h2>About me </h2>
     <blockquote> 
-    <p>I am Pawan Bathe, Currently working as Hardware and Software Validation Engineer at Mango Man Consumer Electronics Pvt. Ltd, Banglore 
+    <p>I am Pawan Bathe, Currently working as Hardware and Software Validation Engineer at Mango Man Consumer Electronics Pvt. Ltd, Bangalore 
 	</br>Before I join Mango Man I was working as Performance and Battey Power SQA Engineer at NVIDIA Graphics Pvt. Ltd, Pune.
 	I received my bachelors degree in Computer Science and Engineering from Government College of Engineering , Aurangabad. <br>
     </p>
