--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="about.html">About Me</a></li>
-      <li><a href="resume.html">Resume</a></li>
+      <li><a href="resume.pdf">Resume</a></li>
       <li><a href="social.html">Socialize</a></li>
       <li><a href="contact.html">Contact me</a></li>
     </ul>
