Added some content

--- a/contact.html
+++ b/contact.html
@@ -8,27 +8,31 @@
 <body>
 <div id="container">
   <div id="banner">
-    <h1>Pawan Bathe,Software Engineer at <a href="http://teewe.in/" >Teewe</h1>
+    <h1>Pawan Bathe,Software Engineer at <a href="http://teewe.in/"><B>Teewe</B></h1>
   </div>
   <div id="navbar">
-    <ul>
+      <ul>
       <b>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="about.html">About</a></li>
-		<li><a href="contact.html">Contact</a></li>
+		<li><a href="contact.html">Contact me</a></li>
       </b>
     </ul>
   </div>
   <div class="clear"></div>
   <div id="content">
-    <h2>About :</h2>
     <blockquote> 
-
-
+     I am available at bathepawan@gmail.com 
+     Connect me 
+    <ul>
+      <b>
+		<li><a href="index.html"></a> Linked In </li>
+		<li><a href="about.html">Quora</a></li>
+		<li><a href="contact.html"> Github</a></li>
+      </b>
+    </ul>
 	</blockquote>
-
-
-  </div>
+    </div>
   <div class="clear"></div>
   <div id="footer">
   <p align="center">&copy; 2015 Pawan Bathe  </p>
