--- a/contact.html
+++ b/contact.html
@@ -22,13 +22,13 @@
   <div class="clear"></div>
   <div id="content">
     <blockquote> 
-     I am available at bathepawan@gmail.com 
+     I am available at bathepawan@gmail.com <br>
      Connect me 
     <ul>
       <b>
-		<li><a href="index.html"></a> Linked In </li>
-		<li><a href="about.html">Quora</a></li>
-		<li><a href="contact.html"> Github</a></li>
+		<li><a href="https://in.linkedin.com/in/pawanbathe"></a> Linked In </li>
+		<li><a href="http://www.quora.com/Pawan-Bathe">Quora</a></li>
+		<li><a href="https://github.com/bathepawan"> Github</a></li>
       </b>
     </ul>
 	</blockquote>
