--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
      Connect me 
     <ul>
       <b>
-		<li><a href="https://in.linkedin.com/in/pawanbathe"></a> Linked In </li>
+		<li><a href="https://in.linkedin.com/in/pawanbathe"> Linked In</a> </li>
 		<li><a href="http://www.quora.com/Pawan-Bathe">Quora</a></li>
 		<li><a href="https://github.com/bathepawan"> Github</a></li>
       </b>
