--- a/index.html
+++ b/index.html
@@ -20,10 +20,27 @@
     </ul>
   </div>
   <div class="clear"></div>
-  <div id="content">
+   <div id="content">
     <h2>About :</h2>
-    <blockquote> 
+ <blockquote> 
+  <ul type="disc">
+  <li>
+   <p>Currently, I am working as a Software Engineer at <a href="">Teewe</a>.</p>
+  </li>
+  <li>
+	  <p>Previously, I was working at <a href='http://www.nvidia.com/page/home.html'>NVIDIA</a> as Mobile Performance QA Engineer in Tegra Division</p>
+  </li>	  
 
+	  
+  <li>
+    <p> I've completed my bachelors in Computer Science and Engineering from <a href="http://www.geca.ac.in/">Governement College of Engineering , Aurangabad</a>.</p>
+  </li>
+  <li>
+	<p>Contact at <strong>bathepawan@gmail.com</strong> or Connect at <strong><a href='https://in.linkedin.com/in/pawanbathe'>Linked In</a><strong> </p>
+
+  </li>
+  
+  </ul>
 
 	</blockquote>
 
