--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,13 @@
     <h1>Pawan Bathe,Software Engineer at <a href="http://teewe.in/"><B>Teewe</B></h1>
   </div>
   <div id="navbar">
-      <ul>
+    <ul>
       <b>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="about.html">About</a></li>
-		<li><a href="contact.html">Contact me</a></li>
+		<li><a href="index.html">About</a></li>
+		<li><a href="projects.html">Projects</a></li>
+        <li><a href="work_ex.html">Work Experience</a></li>
+        <li><a href="skills.html" >Skills</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </b>
     </ul>
   </div>
