--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
   <div id="navbar">
     <ul>
       <b>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="about.html">About</a></li>
-		<li><a href="contact.html">Contact</a></li>
+		<li><a href="index.html">About</a></li>
+		<li><a href="projects.html">Projects</a></li>
+        <li><a href="work_ex.html">Work Experience</a></li>
+        <li><a href="skills.html" >Skills</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </b>
     </ul>
   </div>
