--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
       <b>
 		<li><a href="index.html">About</a></li>
 		<li><a href="projects.html">Projects</a></li>
-        <li><a href="work_ex.html">Work Experience</a></li>
+        <li><a href="work_ex.html">Experience</a></li>
         <li><a href="skills.html" >Skills</a></li>
         <li><a href="contact.html">Contact</a></li>
       </b>
