--- a/index.html
+++ b/index.html
@@ -23,25 +23,21 @@
   </div>
   <div class="clear"></div>
    <div id="content">
-    <h2>About :</h2>
- <blockquote> 
+	<h2>Who am I?</h2> 
+<blockquote> 
   <ul type="disc">
   <li>
-   <p>Currently, I am working as a Software Engineer at <a href="">Teewe</a>.</p>
+   <p>I am a software engineer currently working as Validation Engineer at  <a href="http://teewe.in/">Teewe</a>.</p>
   </li>
   <li>
-	  <p>Previously, I was working at <a href='http://www.nvidia.com/page/home.html'>NVIDIA</a> as Mobile Performance QA Engineer in Tegra Division</p>
+	  <p>Previously, I was working at <a href='http://www.nvidia.com/page/home.html'>NVIDIA</a> as Mobile Performance QA Engineer in Tegra Division.</p>
   </li>	  
 
 	  
   <li>
     <p> I've completed my bachelors in Computer Science and Engineering from <a href="http://www.geca.ac.in/">Governement College of Engineering , Aurangabad</a>.</p>
   </li>
-  <li>
-	<p>Contact at <strong>bathepawan@gmail.com</strong> or Connect at <strong><a href='https://in.linkedin.com/in/pawanbathe'>Linked In</a><strong> </p>
-
-  </li>
-  
+  <li><p>I am constantly striving to learn new software development techniques, and spend much of my free time learning new technologies or improving my portfolio.</p></li>  
   </ul>
 
 	</blockquote>
