--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <title>Pawan Bathe, Sometimes Silent But Always Around (like Air :P) </title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link href="style.css" rel="stylesheet" type="text/css" />
+<link rel="icon" type="image/ico" href="favicon.ico"/>
 </head>
 <body>
 <div id="container">
