Under Construction Pages

--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
   </div>
   <div class="clear"></div>
   <div id="content">
-	
+	<h3>This page is under construction</h3>
 	
   </div>
   <div class="clear"></div>
