--- a/skills.html
+++ b/skills.html
@@ -24,7 +24,71 @@
   </div>
   <div class="clear"></div>
   <div id="content">
-	
+                <!-- TECHNICAL SKILLS SECTION -->
+<!--	               
+                <section>
+
+                    <div class="l-skills-section l-section" id="skills">
+
+                        <div class="container">
+
+                            <h1 class="text-center">Technical Skills</h1>
+
+                            <div class="m-heading-border"></div>
+                            <p class="text-center">
+                                The following section details my competencies in a variety of languages. Each percentage is an arbitrary measurement of how close I am to mastering each language and its unique features.
+                            </p>    
+
+
+                            <div class="row">
+
+                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 l-chart-wrap text-center">
+                                    <div class="chart" data-percent="75">
+                                        <span class="percent"></span>
+                                    </div>
+
+                                    <br><i class="icon-python" style="color:white; font-size: 300%"></i>
+                                    <h5>Python</h5>
+
+                                </div>
+
+                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 l-chart-wrap text-center">
+                                    <div class="chart" data-percent="70">
+                                        <span class="percent"></span>
+                                    </div>
+
+                                    <br><i class="icon-java-bold" style="color:white; font-size: 300%"></i>
+                                    <h5>Java</h5>
+
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 l-chart-wrap text-center">
+                                    <div class="chart" data-percent="65">
+                                        <span class="percent"></span>
+                                    </div>
+                                 	
+                                 	<br><i class="icon-html" style="color:white; font-size: 300%"></i>
+
+                                    <h5>HTML5 / CSS</h5>
+
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12    l-chart-wrap text-center">
+                                    <div class="chart" data-percent="55">
+                                        <span class="percent"></span>
+                                    </div>
+
+                                    <br><i class="icon-c" style="color:white; font-size: 300%"></i>
+                                    <h5>C</h5>
+
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </section> -->
+
+	<h3>This page is under construction</h3>
+
 	
   </div>
   <div class="clear"></div>
