--- a/index.html
+++ b/index.html
@@ -24,24 +24,35 @@
   </div>
   <div class="clear"></div>
    <div id="content">
-	<h2>Who am I?</h2> 
-<blockquote> 
-  <ul type="disc">
-  <li>
-   <p>I am a software engineer currently working as Validation Engineer at  <a href="http://teewe.in/">Teewe</a>.</p>
-  </li>
-  <li>
-	  <p>Previously, I was working at <a href='http://www.nvidia.com/page/home.html'>NVIDIA</a> as Mobile Performance QA Engineer in Tegra Division.</p>
-  </li>	  
+	 <h2>Who am I?</h2> 
 
-	  
-  <li>
+	<div id="left-content">
+		<img src="pawan.jpg" width=140 height=140 align=left>
+    </div><!--Photo -->
+    <div id="right-content> <!--Intro -->
+	<blockquote> 
+ <h3>	
+	<ul type="disc" >
+	<li>
+	<p>I am a software engineer currently working as Validation Engineer at  <a href="http://teewe.in/">Teewe</a>.</p>
+	</li>
+	<li>
+	  <p>Previously, I was working at <a href='http://www.nvidia.com/page/home.html'>NVIDIA</a> as Mobile Performance QA Engineer in Tegra Division.</p>
+	</li>	  
+	<li>
     <p> I've completed my bachelors in Computer Science and Engineering from <a href="http://www.geca.ac.in/">Governement College of Engineering , Aurangabad</a>.</p>
-  </li>
-  <li><p>I am constantly striving to learn new software development techniques, and spend much of my free time learning new technologies or improving my portfolio.</p></li>  
-  </ul>
+	</li>
+	<li><p>I am constantly striving to learn new software development techniques, and spend much of my free time learning new technologies or improving my portfolio.</p></li>  
+	</ul>
+ </h3>
+  <h3> <i>	I am actively looking for new challenges and careers in software or hardware domain. If you would be interested in hiring me, please email me at bathepawan@gmail.com. </i></h3>
+
 	</blockquote>
+	</div> <!--Intro -->
   </div>
+  
+  <div class="clear"></div>
+  
   <div class="clear"></div>
 
   <div id="footer">
