--- a/contact.html
+++ b/contact.html
@@ -24,18 +24,15 @@
   </div>
   <div class="clear"></div>
   <div id="content">
-    <blockquote> 
-     I am available at bathepawan@gmail.com <br>
-     Connect me 
-    <ul>
-      <b>
-		<li><a href="https://in.linkedin.com/in/pawanbathe"> Linked In</a> </li>
-		<li><a href="http://www.quora.com/Pawan-Bathe">Quora</a></li>
-		<li><a href="https://github.com/bathepawan"> Github</a></li>
-      </b>
-    </ul>
-	</blockquote>
-    </div>
+     <h3>Contact Me</h3>
+
+                                    <ul>
+                                        <li class="opacity"><img src="marker.png" alt="marker image"/> <strong>BTM Layout, Bangalore ,Karantaka</strong></li> <br>
+                                        <li class="opacity"><img src="phone.png" alt="phone image" /><strong> +91 9763 0549 39</strong></li> <br>
+                                        <li class="opacity"><img src="mail.png" alt="mail image"/> <strong> bathepawan@gmail.com</strong></li> <br>
+                                        <li class="opacity"><img src="magnifier.png" alt="magnifier image"/><strong> www.pawanbathe.com</strong></li> <br>                             
+                                    </ul>
+  </div>
   <div class="clear"></div>
   <div id="footer">
   <p align="center">&copy; 2015 Pawan Bathe  </p>
