--- a/work_ex.html
+++ b/work_ex.html
@@ -33,7 +33,7 @@
                                     		<p><h3><strong> Teewe </strong></h3> <h4><strong> Hardware Validation Engineer</strong></h4><p>
 		                                        <ul>
                                                      <li><strong>Technologies: </strong>Python,UiAutomator, WorkLoad Automation Framework, git, Shell scripts,Linux, Android SDK </li>
-													 <li><strong>Responsibilities:</strong>
+<!--													 <li><strong>Responsibilities:</strong>
 														<ul>
 															<li>Automated widely used android benchmarks for Performance Measurements </li>
 															<li>Validated performance/power across different modules (WiFi/graphics/multimedia/camera/system).</li>
@@ -41,7 +41,7 @@
 															<li>Performance Benchmarks, Power measurement, Battery performance.</li>
 															<li>Competitive Analysis and Benchmarking </li>
 														</ul>
-														</li>
+														</li> -->
                                                </ul>            
                                     	</div>
                                     </div>
