--- a/hst.html
+++ b/hst.html
@@ -24,7 +24,21 @@
   </div>
   <div class="clear"></div>
   <div id="content">
-	<h3>This page is under construction</h3>
+	<h2>Hardware Sanity Tester - Android Application </h2>
+	<p>
+	Hardware Sanity Tester is android application design to test basic hardware sanity,retrive hardware and software information in easiest way <br>
+This app let you know about 
+<ul>
+<li>System Information</li>
+<li>SOC/GPU/CPU and Manufacturer Details</li>
+<li>Sensors Support Information</li>
+<li>-Thermal Zone Information and Temperatures</li>
+<li>Battery Information </li>
+<li>Software and Build Details</li>
+</ul>
+App let you check basic hardware stuff and does sanity check of several hardware components.
+Good and Handy for System Software Engineer and Tester to look into system
+	</p>
 	
   </div>
   <div class="clear"></div>
