--- a/hst.html
+++ b/hst.html
@@ -26,7 +26,7 @@
   <div id="content">
 	<h2>Hardware Sanity Tester - Android Application </h2>
 	<p>
-	Hardware Sanity Tester is android application design to test basic hardware sanity,retrive hardware and software information in easiest way <br>
+	Hardware Sanity Tester is android application developed to test basic hardware sanity,retrive hardware and software information in easiest way <br>
 This app let you know about 
 <ul>
 <li>System Information</li>
@@ -38,7 +38,10 @@ This app let you know about
 </ul>
 App let you check basic hardware stuff and does sanity check of several hardware components.
 Good and Handy for System Software Engineer and Tester to look into system
-	</p>
+</p>
+<div >
+<img src="images/device1.jpg" width=100 height=250>
+</div>
 	
   </div>
   <div class="clear"></div>
