--- a/hst.html
+++ b/hst.html
@@ -41,6 +41,7 @@ Good and Handy for System Software Engineer and Tester to look into system
 </p>
 <div >
 <img src="images/device1.jpg" width=100 height=250>
+Image here
 </div>
 	
   </div>
