--- a/hst.html
+++ b/hst.html
@@ -3,6 +3,8 @@
 <head>
 <title>Hardware Sanity Tester </title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<meta name="keywords" content="Pawan Bathe,Hardware Sanity Tester,Android Sensors, Android Application,Battery,Software,Thermal" />
+<meta name="description" content="Hardware Sanity Tester - Android Application" />
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="icon" type="image/ico" href="http://pawanbathe.com/favicon.ico"/>
 </head>
@@ -43,10 +45,13 @@ Good and Handy for System Software Engineer and Tester to look into system
 <img src="images/device1.jpg" width=150 height=200>
 <img src="images/device1.jpg" width=150 height=200>
 <img src="images/device1.jpg" width=150 height=200>
-<img src="images/device1.jpg" width=150 height=200>
+<img src="images/sensors1.jpg" width=150 height=200>
 </br>
-<img src="images/device1.jpg" width=150 height=200>
-Image here
+<img src="images/battery1.jpg" width=150 height=200>
+<img src="images/thermal1.jpg" width=150 height=200>
+<img src="images/about1.jpg" width=150 height=200>
+<img src="images/about1.jpg" width=150 height=200>
+
 </div>
 	
   </div>
