HST added snapshots

--- a/hst.html
+++ b/hst.html
@@ -42,7 +42,7 @@ App let you check basic hardware stuff and does sanity check of several hardware
 Good and Handy for System Software Engineer and Tester to look into system
 </p>
 <div >
-<img src="images/device1.jpg" width=150 height=200>
+<img src="images/device1.jpg" href="images/device1.jpg" width=150 height=200>
 <img src="images/device1.jpg" width=150 height=200>
 <img src="images/device1.jpg" width=150 height=200>
 <img src="images/sensors1.jpg" width=150 height=200>
