HST added snapshots

--- a/hst.html
+++ b/hst.html
@@ -42,16 +42,16 @@ App let you check basic hardware stuff and does sanity check of several hardware
 Good and Handy for System Software Engineer and Tester to look into system
 </p>
 <div >
-<a href="images/device1.jpg"> <img src="images/device1.jpg" href="images/device1.jpg" width=150 height=200></a>
-<img src="images/device1.jpg" width=150 height=200>
-<img src="images/device1.jpg" width=150 height=200>
-<img src="images/sensors1.jpg" width=150 height=200>
+<a href="images/device1.jpg"> <img src="images/device1.jpg"  width=150 height=200></a>
+<a href="images/device1.jpg"> <img src="images/device1.jpg"  width=150 height=200></a>
+<a href="images/device1.jpg"> <img src="images/device1.jpg"  width=150 height=200></a>
+<a href="images/device1.jpg"> <img src="images/sensors1.jpg" width=150 height=200></a>
 </br>
-<img src="images/battery1.jpg" width=150 height=200>
-<img src="images/thermal1.jpg" width=150 height=200>
-<img src="images/about1.jpg" width=150 height=200>
-<img src="images/about1.jpg" width=150 height=200>
 
+<a href="images/battery1.jpg"> <img src="images/battery1.jpg"  width=150 height=200></a>
+<a href="images/thermal1.jpg"> <img src="images/thermal1.jpg"  width=150 height=200></a>
+<a href="images/about1.jpg"> <img src="images/about1.jpg"  width=150 height=200></a>
+<a href="images/about1.jpg"> <img src="images/about1.jpg" width=150 height=200></a>
 </div>
 	
   </div>
