HST added snapshots

--- a/hst.html
+++ b/hst.html
@@ -34,7 +34,7 @@ This app let you know about
 <li>System Information</li>
 <li>SOC/GPU/CPU and Manufacturer Details</li>
 <li>Sensors Support Information</li>
-<li>-Thermal Zone Information and Temperatures</li>
+<li>Thermal Zone Information and Temperatures</li>
 <li>Battery Information </li>
 <li>Software and Build Details</li>
 </ul>
@@ -44,9 +44,10 @@ Good and Handy for System Software Engineer and Tester to look into system
 <div >
 <a href="images/device1.jpg"> <img src="images/device1.jpg"  width=300 height=400></a>
 <a href="images/device1.jpg"> <img src="images/device1.jpg"  width=300 height=400></a>
+<br>
 <a href="images/device1.jpg"> <img src="images/device1.jpg"  width=300 height=400></a>
-</br>
 <a href="images/device1.jpg"> <img src="images/sensors1.jpg" width=300 height=400></a>
+</br>
 <a href="images/battery1.jpg"> <img src="images/battery1.jpg"  width=300 height=400></a>
 <a href="images/thermal1.jpg"> <img src="images/thermal1.jpg"  width=300 height=400></a>
 </br>
