--- a/hst_ss.html
+++ b/hst_ss.html
@@ -16,8 +16,8 @@
   <div id="navbar">
     <ul>
       <b>
-		<li><a href="index.html">About</a></li>
-		<li><a href="hst_ss.html">Screenshots</a></li>
+	<li><a href="index.html">About</a></li>
+	<li><a href="hst_ss.html">Screenshots</a></li>
         <li><a href="work_ex.html">Insights</a></li>
         <li><a href="skills.html" >Blogs</a></li>
         <li><a href="contact.html">Feedback</a></li>
@@ -26,21 +26,20 @@
   </div>
   <div class="clear"></div>
   <div id="content">
-	<h2>Hardware Sanity Tester - Android Application </h2>
-	<p>
-	Hardware Sanity Tester is android application developed to test basic hardware sanity,retrive hardware and software information in easiest way <br>
-This app let you know about 
-<ul>
-<li>System Information</li>
-<li>SOC/GPU/CPU and Manufacturer Details</li>
-<li>Sensors Support Information</li>
-<li>Thermal Zone Information and Temperatures</li>
-<li>Battery Information </li>
-<li>Software and Build Details</li>
-</ul>
-App let you check basic hardware stuff and does sanity check of several hardware components.
-Good and Handy for System Software Engineer and Tester to look into system
-</p>
+<h2>Hardware Sanity Tester - Android Application </h2>
+<div >
+<a href="images/device1.jpg"> <img src="images/device1.jpg"  width=300 height=400></a>
+<a href="images/device1.jpg"> <img src="images/device1.jpg"  width=300 height=400></a>
+<br>
+<a href="images/device1.jpg"> <img src="images/device1.jpg"  width=300 height=400></a>
+<a href="images/device1.jpg"> <img src="images/sensors1.jpg" width=300 height=400></a>
+</br>
+<a href="images/battery1.jpg"> <img src="images/battery1.jpg"  width=300 height=400></a>
+<a href="images/thermal1.jpg"> <img src="images/thermal1.jpg"  width=300 height=400></a>
+</br>
+<a href="images/about1.jpg"> <img src="images/about1.jpg"  width=300 height=400></a>
+<a href="images/about1.jpg"> <img src="images/about1.jpg" width=300 height=400></a>
+</div>
 	
   </div>
   <div class="clear"></div>
