--- a/hst_ss.html
+++ b/hst_ss.html
@@ -16,11 +16,11 @@
   <div id="navbar">
     <ul>
       <b>
-	<li><a href="index.html">About</a></li>
-	<li><a href="hst_ss.html">Screenshots</a></li>
-        <li><a href="work_ex.html">Insights</a></li>
-        <li><a href="skills.html" >Blogs</a></li>
-        <li><a href="contact.html">Feedback</a></li>
+        <li><a href="hst.html"> Home </a></li>
+        <li><a href="hst_ss.html"> Snapshots </a></li>
+        <li><a href="work_ex.html"> Details </a></li>
+        <li><a href="skills.html" > More Apps </a></li>
+        <li><a href="contact.html"> Feedback </a></li>
       </b>
     </ul>
   </div>
