--- a/hst.html
+++ b/hst.html
@@ -18,9 +18,9 @@
       <b>
 	<li><a href="hst.html"> Home </a></li>
 	<li><a href="hst_ss.html"> Snapshots </a></li>
-        <li><a href="work_ex.html"> Details </a></li>
-        <li><a href="skills.html" > More Apps </a></li>
-        <li><a href="contact.html"> Feedback </a></li>
+        <li><a href="#"> Details </a></li>
+        <li><a href="#" > More Apps </a></li>
+        <li><a href="#"> Feedback </a></li>
       </b>
     </ul>
   </div>
