--- a/index.html
+++ b/index.html
@@ -34,15 +34,20 @@
  <h3>	
 	<ul type="disc" >
 	<li>
-	<p>I am a software engineer currently working as Validation Engineer at  <a href="http://teewe.in/">Teewe</a>.</p>
+	<p>I am currently working as Mobility Engineer at  <a href="https://www.creosense.com/">CREO Tech (<a href="http://teewe.in/">Teewe</a>)</a>.</p>
 	</li>
 	<li>
-	  <p>Previously, I was working at <a href='http://www.nvidia.com/page/home.html'>NVIDIA</a> as Mobile Performance QA Engineer in Tegra Division.</p>
+	  <p>Previously, I have worked with NVIDIA  <a href='http://www.nvidia.com/page/home.html'>NVIDIA</a> as Software QA Engineer in Tegra Division.</p>
 	</li>	  
 	<li>
     <p> I've completed my bachelors in Computer Science and Engineering from <a href="http://www.geca.ac.in/">Governement College of Engineering , Aurangabad</a>.</p>
 	</li>
-	<li><p>I am constantly striving to learn new software development techniques, and spend much of my free time learning new technologies or improving my portfolio.</p></li>  
+	<li>
+		<p>
+		My interests include Android Frameworks, Linux Kernel , Computer Networks and IOT.
+		</p>
+	</li>
+	<li><p>I am constantly striving to learn new software development techniques, and spend much of my free time learning new technologies.</p></li>  
 	</ul>
  </h3>
 
