--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
 <div id="container">
   <div id="banner">
-    <h1>Pawan Bathe,Software Engineer at <a href="http://teewe.in/" >Teewe</h1>
+    <h1>Pawan Bathe,Software Engineer at <a href="https://www.qualcomm.com/" >Qualcomm</h1>
   </div>
   <div id="navbar">
     <ul>
@@ -29,7 +29,7 @@
  <blockquote> 
   <ul type="disc">
   <li>
-   <p>Currently, I am working as a Software Engineer at <a href="">Teewe</a>.</p>
+   <p>Currently, I am working as a Software Engineer at <a href="">Qualcomm</a>.</p>
   </li>
   <li>
 	  <p>Previously, I was working at <a href='http://www.nvidia.com/page/home.html'>NVIDIA</a> as Mobile Performance QA Engineer in Tegra Division</p>
