--- a/work_ex.html
+++ b/work_ex.html
@@ -9,7 +9,7 @@
 <body>
 <div id="container">
   <div id="banner">
-    <h1>Pawan Bathe,Software Engineer at <a href="http://teewe.in/" >Teewe</h1>
+    <h1>Pawan Bathe,Software Engineer at <a href="https://www.qualcomm.com/" >Qualcomm</h1>
   </div>
   <div id="navbar">
     <ul>
@@ -26,11 +26,32 @@
 <br>
 <br>                   <div class="l-standard-section" id="working-on">
                         <div class="container">
-                            <div class="row">
+                        <div class="row">
                             		<div class="icon-block">
-                                 <img src="teewe.png">
                                     	<div >
-                                    		<p><h3><strong> CREO Tech </strong></h3> <h4><strong> Software Engineer</strong></h4><p>
+                                    		<p>
+											<h3><strong>1. Qualcomm : August 2016 - till present </strong></h3>
+											<h4><strong> Software Engineer</strong></h4>
+											<p>
+		                                        <ul>
+                                                     <li><strong>Technologies: </strong>C++,Python,git</li>
+													 	 <li><strong>Responsibilities:</strong>
+													 <ul>
+													 <li> Test Framework and Automation Development</li>
+													 </ul>
+                                               </ul>            
+                                    	</div>
+                                    </div>
+                                    <br>
+                        </div><!-- row -->
+
+						<div class="row">
+                            		<div class="icon-block">
+                                    	<div >
+                                    		<p>
+											<h3><strong>2. CREO Tech : July 2015 - August 2016</strong></h3> 
+											    <h4><strong> Software Engineer</strong></h4>
+											<p>
 		                                        <ul>
                                                      <li><strong>Technologies: </strong>C,Java,Python,WorkLoad Automation Framework, git, Shell scripts,Linux, Android SDK </li>
 													 <li><strong>Responsibilities:</strong>
@@ -49,17 +70,14 @@
                             </div><!-- row -->
                              <div class="row">
                                     <div class="icon-block">   
-                                    <img class="nvidia-image" src="nvidia.jpg" width=160 height=70>
                                         <div class="content">
-                                            <h3><strong> NVIDIA </strong></h3>
+                                            <h3><strong>3. NVIDIA : June 2013 - July 2015 </strong></h3>
                                             <h4><strong> Software QA Engineer (Performance and Power) </strong></h4>
-                                               <ul>
-													<li><strong>Product Name:</strong> Shield Tablet [ <a href="http://shield.nvidia.com/tablet" >http://shield.nvidia.com/tablet </a> ] </li>
-                                                     <li><strong>Technologies: </strong>Python, git,UiAutomator,Workload Automation, Shell scripts, Systrace, Linux, Android SDK </li>
-                                                     <li><strong>Description:</strong> The NVIDIA SHIELD tablet is a high-performance tablet that transforms into a serious
-																gaming machine with the SHIELD controller and NVIDIA GRID game streaming service. </li>
-													 <li><strong>Responsibilities:</strong>
-														<ul>
+											<ul>
+                                             <li><strong>Technologies: </strong>C,Java,Python,WorkLoad Automation Framework, git, Shell scripts,Linux, Android SDK </li>
+
+												 <li><strong>Responsibilities:</strong>
+                                						<ul>
 															<li>Profiled performance and power characteristics of SoC's and BSP.	</li>
 															<li>Validated performance/power across different modules (WiFi/graphics/multimedia/camera/system).</li>
 															<li>Validated Performance/Power through entire product cycle.</li>
@@ -67,26 +85,6 @@
 															<li>Performance Benchmarks, Power measurement, Battery performance.</li>
 															<li>Competitive Analysis and Benchmarking </li>
 														</ul>
-														</li>
-                                               </ul>
-                                               <ul>
-													<li><strong>Product Name:</strong>Tango Developer Tablet[<a href="https://www.google.com/atap/project-tango/">https://www.google.com/atap/project-tango/ </a>  ]</li>
-                                                     <li><strong>Technologies: </strong>Python, git,UiAutomator Workload Automation, Shell scripts, Systrace, Linux, Android SDK </li>
-                                                     <li><strong>Description:</strong>Project Tango technology gives a mobile device the ability to navigate the physical world
-																		similar to how we do as humans. Project Tango brings a new kind of spatial perception to the Android
-																		device platform by adding advanced computer vision, image processing, and special vision sensors.</li>
-													 <li><strong>Responsibilities:</strong>
-														<ul>
-															<li>Verified Motion Tracking, Depth Perception and Area Learning Functionality </li>
-															<li>Profiled performance and power characteristics of SoC's and BSP.	</li>
-															<li>Validated performance/power across different modules (WiFi/graphics/multimedia/camera/system).</li>
-															<li>Validated Performance/Power through entire product cycle.</li>
-															<li>Measured Perf-Power trade off, thermal, system snappiness.</li>
-															<li>Performance Benchmarks, Power measurement, Battery performance.</li>
-														</ul>
-														</li>
-                                               </ul>
-
                                              </div>
                                     </div>
 
