--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div id="container">
   <div id="banner">
-    <h1>Pawan Bathe,Software Engineer at <a href="http://teewe.in/" >Teewe</h1>
+    <h1>Pawan Bathe,Software Engineer at <a href="https://www.qualcomm.com/" > Qualcomm</h1>
   </div>
   <div id="navbar">
     <ul>
@@ -34,7 +34,7 @@
  <h3>	
 	<ul type="disc" >
 	<li>
-	<p>I am currently working as Mobility Engineer at  <a href="https://www.creosense.com/">CREO Tech (<a href="http://teewe.in/">Teewe</a>)</a>.</p>
+	<p>I am currently working as Mobility Engineer at  <a href="https://www.creosense.com/">CREO Tech (<a href="https://www.qualcomm.com/">Qualcomm</a>)</a>.</p>
 	</li>
 	<li>
 	  <p>Previously, I have worked with NVIDIA  <a href='http://www.nvidia.com/page/home.html'>NVIDIA</a> as Software QA Engineer in Tegra Division.</p>
