--- a/skills.html
+++ b/skills.html
@@ -9,7 +9,7 @@
 <body>
 <div id="container">
   <div id="banner">
-    <h1>Pawan Bathe,Software Engineer at <a href="http://teewe.in/" >Teewe</h1>
+    <h1>Pawan Bathe,Software Engineer at <a href="https://www.qualcomm.com/" >Qualcomm</h1>
   </div>
   <div id="navbar">
     <ul>
