Projects details added

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
  <h3>	
 	<ul type="disc" >
 	<li>
-	<p>I am currently working as Mobility Engineer at  <a href="https://www.creosense.com/">CREO Tech (<a href="https://www.qualcomm.com/">Qualcomm</a>)</a>.</p>
+	<p>I am currently working as Software Engineer at <a href="https://www.qualcomm.com/">Qualcomm</a></a>.</p>
 	</li>
 	<li>
-	  <p>Previously, I have worked with NVIDIA  <a href='http://www.nvidia.com/page/home.html'>NVIDIA</a> as Software QA Engineer in Tegra Division.</p>
+	  <p>Previously, I have worked with <a href='https://creosense.com/'> CREO Tech </a> as Software Engineer and with  <a href='http://www.nvidia.com/page/home.html'>NVIDIA</a> as Software QA Engineer in Tegra Division.</p>
 	</li>	  
 	<li>
     <p> I've completed my bachelors in Computer Science and Engineering from <a href="http://www.geca.ac.in/">Governement College of Engineering , Aurangabad</a>.</p>
