--- a/projects.html
+++ b/projects.html
@@ -24,8 +24,42 @@
   </div>
   <div class="clear"></div>
   <div id="content">
-	<h3>This page is under construction</h3>
-	
+	<div >
+              <p>
+				<h3><strong> <a href="https://play.google.com/store/apps/details?id=com.pawanbathe.hardwaresanitytester&hl=en">Hardware Sanity Tester : Android Application </a> </strong></h3> 
+				<p>
+	              <ul>
+                                                     <li><strong>Technologies: </strong>Android SDK/NDK, Java , git  </li>
+		           </ul>
+<p>
+	Hardware Sanity Tester is android application developed to test basic hardware sanity,retrive hardware and software information in easiest way <br>
+This app let you know about 
+<ul>
+<li>System Information</li>
+<li>SOC/GPU/CPU and Manufacturer Details</li>
+<li>Sensors Support Information</li>
+<li>Thermal Zone Information and Temperatures</li>
+<li>Battery Information </li>
+<li>Software and Build Details</li>
+</ul>
+App let you check basic hardware stuff and does sanity check of several hardware components.
+Good and Handy for System Software Engineer and Tester to look into system
+</p>         
+ </div>
+ 
+ 	<div >
+              <p>
+				<h3><strong> <a href="https://github.com/bathepawan/AndroidNativeScroll">Android Native Scroll Script</a> </strong></h3> 
+				<p>
+	              <ul>
+                                                     <li><strong>Technologies: </strong>Android SDK/NDK,Java , git  </li>
+		           </ul>
+<p>
+It is simple script written using android NDK for ARM devices that helps you scroll in any android application or UI vertically or horizontally for any 
+device with any resolution for specified time.
+</p>         
+ </div>
+ 
   </div>
   <div class="clear"></div>
 
