--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                                         <li class="opacity"><img src="marker.png" alt="marker image"/> <strong>BTM Layout, Bangalore ,Karantaka</strong></li> <br>
                                         <li class="opacity"><img src="phone.png" alt="phone image" /><strong> +91 9763 0549 39</strong></li> <br>
                                         <li class="opacity"><img src="mail.png" alt="mail image"/> <strong> bathepawan@gmail.com</strong></li> <br>
-                                        <li class="opacity"><img src="magnifier.png" alt="magnifier image"/><strong> www.pawanbathe.com</strong></li> <br>                             
+                                        <li class="opacity"><img src="magnifier.png" alt="magnifier image"/><strong><a href="www.0x80bits.com">www.0x80bits.com</strong></li> <br>                             
                                     </ul>
   </div>
   <div class="clear"></div>
