--- a/index.html
+++ b/index.html
@@ -30,28 +30,22 @@
 		<img src="pawan.jpg" width=120 height=140 align=left>
     </div><!--Photo -->
     <div id="right-content> <!--Intro -->
-	<blockquote> 
- <h3>	
-	<ul type="disc" >
-	<li>
-	<p>I am currently working as Software Engineer at <a href="https://www.qualcomm.com/">Qualcomm</a></a>.</p>
-	</li>
-	<li>
-	  <p>Previously, I have worked with <a href='https://creosense.com/'> CREO Tech </a> as Software Engineer and with  <a href='http://www.nvidia.com/page/home.html'>NVIDIA</a> as Software QA Engineer in Tegra Division.</p>
-	</li>	  
-	<li>
-    <p> I've completed my bachelors in Computer Science and Engineering from <a href="http://www.geca.ac.in/">Governement College of Engineering , Aurangabad</a>.</p>
-	</li>
-	<li>
-		<p>
-		My interests include Android Frameworks, Linux Kernel , Computer Networks and IOT.
-		</p>
-	</li>
-	<li><p>I am constantly striving to learn new software development techniques, and spend much of my free time learning new technologies.</p></li>  
-	</ul>
- </h3>
+	 <blockquote> 
+  <ul type="disc">
+  <li>I am working as a Software Engineer at <a href="">Qualcomm</a>. </li>
 
-	</blockquote>
+  <li>I have worked with <a href='http://www.nvidia.com/page/home.html'>NVIDIA</a> as Mobile Performance Engineer from June 2013 to July 2015</li>	  
+
+  <li>I've bachelors degree in Computer Science and Engineering from <a href="http://www.geca.ac.in/">Governement College of Engineering , Aurangabad</a>.
+  </li>
+  <li>Contact me at <strong>bathepawan@gmail.com</strong> or Connect at <strong><a href='https://in.linkedin.com/in/pawanbathe'>Linked In</a><strong>
+  </li>
+  
+  </ul>
+
+ <p>  I am constantly striving to learn new software development techniques, and spend much of my free time learning new technologies. </p>
+  </blockquote>
+
 	</div> <!--Intro -->
   </div>
   
